--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <version>3.0.0-M7</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>Irfan.xml</suiteXmlFile>
+            <suiteXmlFile>Batch.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
       </plugin>
